--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,4 +1,7 @@
 {
   "name": "mydao-scripts",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@ethersproject/constants": "^5.6.1"
+  }
 }
